# terralingua

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_experiment.sh
analysis_scripts/: 001_llm_agent_analyser.py  002_make_graph.py  003_llm_group_analyser.py  004_artifact_analysis.py  005_artifact_classification.py  006_artifact_philogeny.py  AI_ANTHROPOLOGIST.md  artifact_complexity.py  error_tracker.py  graph_utils.py  plot_utils.py  tags.json
analysis_scripts/notebooks/: n000_general_stats.ipynb  n001_llm_agent_analyser.ipynb  n002_graph_analysis.ipynb  n003_llm_group_analysis.ipynb  n004_artifact_analysis.ipynb  n005_artifact_categories.ipynb  n006_artifact_phylogeny.ipynb  n007_interactive_phylogeny.ipynb
core/agents/: agent_logger.py  human_agent.py  llm_agent.py  prompt_templates.py
core/environment/: actions.py  artifact.py  env.py  env_logger.py
core/experiment/: checkpoint.py  cli.py  config.py  llm_router.py  runner.py
core/genome/: __init__.py  base_genome.py  no_traits.py  ocean_5.py
core/utils/: __init__.py  analysis_utils.py  generic.py  llm_client.py  llm_utils.py
docs/: index.html  style.css
paper_experiment_scripts/: run_abundant.sh  run_artifact_cost.sh  run_core.sh  run_creative.sh  run_inert_artifacts.sh  run_long_memory.sh  run_no_motivation.sh  run_no_personality.sh
